@@ -1,12 +1,16 @@
 Version 1.3.13+svn:
  * language and i18n:
    * updated translations: Chinese, Lithuanian
- * user interface
-   * the apple key works a shortcut modifier again (bug #10586)
  * sound:
    * timer bell in MP starts when there are 20 seconds left and fades in
      gradually for 10 seconds (fr #10559)
    * fixed timer bell not always playing (bug #10559)
+ * user interface
+   * the apple key works a shortcut modifier again (bug #10586)
+ * miscellaneous and bug fixes:
+   * when loading a unit some traits didn't get applied correctly but got
+     fixed in a later state. This could lead to some units not leveling 
+     properly (bug #10304)
 
 Version 1.3.13:
  * campaigns:
